clock frame tests. mountain time added